# learning-ml

langchain-experiment/: README.md  pyproject.toml
langchain-experiment/tests/: debug_utils.py  expert.py  test_agent.py  test_agent_sql.py  test_expert.py
rag-experiment/: .gitignore  README.md  pyproject.toml
rag-experiment/docs/: food.md  java.md  python.md  rebel500.md
rag-experiment/tests/: test_hello.py
